--- a/history.html
+++ b/history.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>MORE MORE JUMP! History</title>
-    <link href="css\normalize.css" rel="stylesheet" type="text/css"/>
-    <link href="css\style.css" rel="stylesheet" type="text/css"/>
+    <link href="css/normalize.css" rel="stylesheet" type="text/css"/>
+    <link href="css/style.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <!-- navigation -->
         <nav>
-            <button class="navigation"><a href="index.html" id = "home" onclick="onPage(this)">Home</a></button>
-            <button class="navigation"><a href="history.html" id = "history" onclick="onPage(this)">History</a></button>
-            <button class="navigation"><a href="members.html" id = "members" onclick="onPage(this)">Members</a></button>
-            <button class="navigation"><a href="music.html" id = "music" onclick="onPage(this)">Music</a></button>
+            <button onclick="window.location.href='index.html'" class="navigation" id="home">Home</button>
+            <button onclick="window.location.href='history.html'" class="navigation" id="history">History</button>
+            <button onclick="window.location.href='members.html'" class="navigation" id="members">Members</button>
+            <button onclick="window.location.href='music.html'" class="navigation" id="music">Music</button>
         </nav>
     </header>
 
@@ -102,6 +102,6 @@
         <a href="https://projectsekai.fandom.com/wiki/SEKAI_(location)">Project SEKAI - SEKAI wiki</a> 
         for more information. All rights belongs to SEGA and Colorful Palatte.
     </footer>
-    <script src="javascript\script.js"></script>
+    <script src="javascriptscript.js"></script>
 </body>
 </html>
