Fixed the errors

--- a/history.html
+++ b/history.html
@@ -61,7 +61,7 @@
 
         <article>
             <h1 class="heading">First song:</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/OKnlAzYghkk?si=xHWFaIynFtF3vLNi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/OKnlAzYghkk?si=xHWFaIynFtF3vLNi" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <h4 class="disclaimer">Disclaimer: the video is muted due to copyright. <a href="https://youtu.be/3yQWZcYXcgg?si=mP64oPg8wp9dGVhv">Click to the official 3DMV</a></h4>
             <p class = info>
                 Their first song is “Idol Shin'eitai”. It is a commissioned song by Mitchie M. The song features Hatsune Miku, 
@@ -93,6 +93,7 @@
             When the feelings of a person are realized, they will manifest in the SEKAI through a song. 
             People can travel to their SEKAI by playing "Untitled" songs. These songs have no melody or lyrics and are created when a SEKAI is born. 
             </p>
+        </article>
     </section>
     <br>
     <br>
